[package]
name = "rogue-cross"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[features]
log = []

[dependencies]
crossterm = "0.17.7"
specs = "0.16.1"
specs-derive = "0.4.1"

[workspace]
members = [ 
  "rc-game",
  "ch01-hellorust",
  "ch02-helloecs",
  "ch02-helloecs-nolib"
]

[profile.dev]
opt-level = 1
